3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

server/plugins.c: sanity checks on parameters for usual crashing culprit.
Nicolas Weeger 2007-07-25

Add support for using png files for html handbook and spoiler - png support
is common enough in browsers now days that don't need to convert to gif.
Reduces tool requirements to build documents (as it is a simple copy
for the png, vs actual conversion), and speeds up building the files
dramatically.
--
doc/scripts/makeps.pl: Add png output handling.  What this amounts to is
  doing a hard link to the original png file.
doc/playbook-html/Makefile.am, doc/spoiler-html/Makefile.am: Use png
  output for images now, not gif.
MSW 2007-07-16

plugins/cfpython/cfpython_object.c: don't try to insert a NULL object.
Nicolas Weeger 2007-07-16

lib/Makefile.in: Rebuilt
server/skills.c: Fix crash - using incorrect map pointer in call
  to get_map_ob
common/object.c: Add some debugging to maybe help track down a crash
  on metalforge.
MSW 2007-07-11

Tentative fix for bug #1746208: Critical crash with 'printlos'.
 common/los.c: use safe string functions. Use 0/100 for view instead of 0-100.
Nicolas Weeger 2007-07-11

Update face information below player if it changes.  Add P_PLAYER mapflag
field, as well as pointer to player on space making it easy to find
players on a space.  Fix for bug 1735459.  Change merged from trunk.
---
test/unit/common/stubs_common.c, crossedit/stubs.c, random_maps/standalone.c:
     Add esrv_update_item() stub
common/map.c: Modify update_position() to look for player and
  update MapSpace accordingly.
common/object.c: update_object():  If player is object, update map