@@ -17,6 +17,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Add new NDI_ALL_DMS to send a message to all connected DMs. Used in case of errors.
+ include/newclient.h
+ socket/info.c
+Nicolas Weeger 2007-08-11
+
 server/plugins.c: sanity checks on parameters for usual crashing culprit.
 Nicolas Weeger 2007-07-25
 
